# dx-www-runtime

./: .clippy.toml  .gitignore  CONTRIBUTING.md  Cargo.toml  CUsersComputer.geminiantigravitybrain2075c288-43ac-42ce-a42c-689a15332787app.dxb  README.md  check_short_2.txt  rustfmt.toml
.github/: copilot-instructions.md
benchmarks/: README.md  benchmark-results.json  index.html  run-all.sh
crates/dx-binary/: Cargo.toml  README.md
crates/dx-binary/src/: delta.rs  deserializer.rs  htip_bridge.rs  lib.rs  opcodes.rs  protocol.rs  serializer.rs  string_table.rs  template.rs
crates/dx-binary/tests/: integration.rs
crates/dx-cache/: Cargo.toml  README.md
crates/dx-cache/src/: lib.rs
crates/dx-cache/src/crypto/: mod.rs
crates/dx-cache/src/preload/: mod.rs
crates/dx-cache/src/storage/: cache_api.rs  indexeddb.rs  mod.rs
crates/dx-cli/: Cargo.toml  README.md
crates/dx-cli/src/: config.rs  main.rs  scaffold.rs  watch.rs
crates/dx-cli/src/commands/: build.rs  dev.rs  mod.rs  new_project.rs
crates/dx-cli/tests/: e2e_browser.rs  e2e_compile.rs
crates/dx-client/: Cargo.toml
crates/dx-client-tiny/: Cargo.toml
crates/dx-client-tiny/src/: allocator.rs  lib.rs
crates/dx-client/src/: allocator.rs  lib.rs  node_registry.rs  renderer.rs  stream_reader.rs  string_table.rs  template_cache.rs
crates/dx-compiler/: Cargo.toml  README.md
crates/dx-compiler/src/: analyzer.rs  codegen.rs  codegen_macro.rs  codegen_micro.rs  dev_server.rs  lib.rs  main.rs  packer.rs  parser.rs  splitter.rs  swc_parser.rs
crates/dx-core/: Cargo.toml
crates/dx-core/src/: lib.rs
crates/dx-dom/: Cargo.toml
crates/dx-dom/src/: lib.rs
crates/dx-morph/: Cargo.toml
crates/dx-morph/src/: lib.rs
crates/dx-packet/: Cargo.toml
crates/dx-packet/src/: lib.rs
crates/dx-sched/: Cargo.toml
crates/dx-sched/src/: lib.rs
crates/dx-server/: Cargo.toml  README.md
crates/dx-server/src/: delta.rs  handlers.rs  lib.rs  main.rs  ssr.rs  stream.rs
debug_out/: Cargo.toml
debug_out/src/: lib.rs
demo-app/: .gitignore  dx.toml  index.html
demo-app/.dx-cache/: app.htip  generated.rs  templates.json
demo-app/src/: App.tsx
dist-macro/: app.htip  generated.rs  runtime.json  templates.json
dist-micro/: generated.rs  runtime.json
dist-test/: app.htip  generated.rs  runtime.json  templates.json
docs/: 404_FIX.md  48_HOUR_PLAN.md  ACHIEVEMENTS.md  ARCHITECTURE.md  BEST_CURRENT_FRAMEWORKS.MD  BUNDLE_SIZE.md  CHANGELOG.md  CODE_QUALITY_AUDIT.md  COMPILER-BUILD-SUMMARY.md  COMPILER.md  COMPILER_BUILD_SUMMARY_DEC12.md  COMPILER_INTELLIGENCE.md  DAY_12_COMPLETE.md  DAY_12_STREAM_CONSUMER.md  DAY_13_CLIENT_PATCHER.md  DAY_14_ETERNAL_CACHE.md  DEVELOPMENT.md  FRAMEWORKS.md  INTEGRATION_COMPLETE.md  LAUNCH_SUMMARY.md  NO_STD.md  PHASE_6_IMPLEMENTATION_SUMMARY.md  PHASE_6_QUICK_REFERENCE.md  PHASE_6_STATUS.md  PHASE_6_VICTORY.md  PHASE_7_DAY_13_ORCHESTRATOR.md  PROJECT_STATUS_DEC12.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SERVER_PHASE5_DAY15.md  SERVER_PHASE5_DAY16.md  SERVER_PHASE5_DAY17.md  SERVER_STACK_COMPLETE.md  SERVER_TRINITY_COMPLETE.md  STACK_COMPLETE.md  VICTORY.md  VICTORY_DAY_12.md  VICTORY_DAY_13.md  (+2 more)
examples/: README.md  README_STREAMING.md  counter-simple.tsx  dashboard-complex.tsx  dx-cache.js  integration-demo.html  integration-example.js  patcher-example.js  streaming-example.js  test-streaming.html
examples/hello-world/: Cargo.toml  DEMO_README.md  README.md  build.bat  build.sh  demo.html  index.html  serve.py
examples/hello-world/src/: htip_demo.rs  lib.rs
nextjs/: package.json
scripts/: demo-server.bat  demo-server.sh  demo-stream.bat  demo-stream.sh  demo.sh  optimize-wasm.bat  optimize-wasm.sh  quickstart.bat  quickstart.sh
test-app/src/: App.tsx  main.dx
