[workspace]
resolver = "2"
members = [
    "crates/dx-core",
    "crates/dx-dom",
    "crates/dx-morph",
    "crates/dx-sched",
    "crates/dx-compiler",
    "crates/dx-binary",
    "examples/hello-world",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["dx-www Runtime Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# WASM Interop - Latest Stable
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlTemplateElement",
    "DocumentFragment",
    "Text",
    "Comment",
    "Performance",
    "console",
] }

# Zero-Copy Serialization
bincode = "2.0.0-rc.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Memory Management
bumpalo = "3.14"
once_cell = "1.19"

# Error Handling
console_error_panic_hook = "0.1"

# Internal Workspace Crates
dx-core = { path = "crates/dx-core" }
dx-dom = { path = "crates/dx-dom" }
dx-morph = { path = "crates/dx-morph" }
dx-sched = { path = "crates/dx-sched" }
dx-compiler = { path = "crates/dx-compiler" }
dx-binary = { path = "crates/dx-binary" }
