[workspace]
resolver = "2"
members = [
    # Core runtime crates
    "crates/dx-core",
    "crates/dx-dom",
    "crates/dx-morph",
    "crates/dx-sched",
    
    # Binary protocol
    "crates/dx-binary",
    "crates/dx-packet",
    
    # Client runtimes (WASM)
    "crates/dx-client",
    "crates/dx-client-tiny",
    
    # Developer tools
    "crates/dx-compiler",
    "crates/dx-cli",
    
    # Server-side (optional)
    "crates/dx-server",
    "crates/dx-cache",
    
    # Examples
    "examples/hello-world",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["dx-www Runtime Team <team@dx-www.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dx-www/dx-www-runtime"
homepage = "https://dx-www.dev"
documentation = "https://docs.dx-www.dev"

[workspace.dependencies]
# WASM Interop - Latest Stable
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlElement",
    "HtmlTemplateElement",
    "DocumentFragment",
    "Text",
    "Comment",
    "Performance",
    "console",
] }

# Zero-Copy Serialization
bincode = "2.0.0-rc.3"
bytemuck = { version = "1.14", features = ["derive"] }

# Memory Management
bumpalo = "3.14"
once_cell = "1.19"

# Error Handling
console_error_panic_hook = "0.1"

# Internal Workspace Crates
dx-core = { path = "crates/dx-core" }
dx-dom = { path = "crates/dx-dom" }
dx-morph = { path = "crates/dx-morph" }
dx-sched = { path = "crates/dx-sched" }
dx-compiler = { path = "crates/dx-compiler" }
dx-binary = { path = "crates/dx-binary" }
dx-packet = { path = "crates/dx-packet" }
dx-client = { path = "crates/dx-client" }

# ============================================================================
# AGGRESSIVE SIZE OPTIMIZATION (9KB TARGET)
# ============================================================================

[profile.release]
opt-level = "z"       # Optimize for size (not speed)
lto = true            # Link Time Optimization (removes unused code)
codegen-units = 1     # Slower build, smaller binary
panic = "abort"       # Remove stack unwinding (~20KB savings)
strip = true          # Strip symbols

