[package]
name = "dx-binary"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "The binary protocol that killed JSON and HTML"
repository = "https://github.com/dx-sh/dx-www-runtime"
keywords = ["binary", "wasm", "dx", "protocol", "htip"]
authors = ["Dx-WWW Runtime Team"]

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
ed25519-dalek = { version = "2.1.0", features = ["serde", "rand_core"] }
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "HtmlTemplateElement", "Node", "Text", "Comment", "NodeList", "DomTokenList", "console"] }
console_error_panic_hook = "0.1"

# Internal workspace dependencies
dx-core = { path = "../dx-core", optional = true }
dx-morph = { path = "../dx-morph", optional = true }

# Zero-copy parsing
bytemuck = { version = "1.14", features = ["derive"] }

# Hashing for string deduplication
blake3 = "1.8"

# Error handling
thiserror = "1.0"

[dev-dependencies]
hex = "0.4"

[features]
default = ["client"]
server = []      # Only for dx build tool
client = ["dx-core", "dx-morph"]      # Only for dx-www-runtime

