[package]
name = "dx-cli"
version = "0.4.0"
edition = "2024"
authors = ["Dx-WWW Team"]
description = "Command-line interface for the dx-www Binary Web Runtime"
license = "MIT OR Apache-2.0"

[[bin]]
name = "dx"
path = "src/main.rs"

[dependencies]
# Command-line parsing
clap = { version = "4.5", features = ["derive", "cargo", "color"] }

# Internal dependencies
dx-compiler = { path = "../dx-compiler" }
dx-server = { path = "../dx-server" }
dx-packet = { path = "../dx-packet" }

# File watching
notify = "6.1"
notify-debouncer-mini = "0.4"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal output
console = "0.15"
indicatif = "0.17"

# Path handling
walkdir = "2.5"

# Process management
crossbeam-channel = "0.5"

# Browser opening
open = "5.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"
