[package]
name = "dx-client-tiny"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ultra-tiny WASM runtime for dx-www - NO_STD Integer DOM (< 2 KB)"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ZERO dependencies - pure NO_STD

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for max optimization
panic = "abort"        # No unwinding
strip = true           # Strip symbols
