[package]
name = "dx-client-tiny"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Ultra-tiny WASM runtime for dx-www - NO_STD Integer DOM (< 2 KB)"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true

[dependencies]
# ZERO dependencies - pure NO_STD

