[package]
name = "dx-client"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "9KB WASM runtime for dx-www - zero-copy, zero-alloc, zero-crypto"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Protocol types (zero-dep)
dx-packet = { path = "../dx-packet" }

# WASM interop (minimal)
wasm-bindgen = "0.2"
js-sys = "0.3"

# Using custom BumpAlloc instead of wee_alloc for ~0.5KB savings
# wee_alloc = "0.4"  # REMOVED - see allocator.rs

# DOM access (ABSOLUTE MINIMUM features)
# Strategy: Use Node for everything possible, Element only when required
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Node",
    "Element",
    "HtmlTemplateElement",
    "DocumentFragment",
] }

# NO: serde, bincode, ed25519-dalek, rand, blake3, thiserror, bumpalo
# NO: HtmlElement, Text, DomTokenList, CssStyleDeclaration (use JS for these)
# Crypto verification happens in JS loader BEFORE WASM loads

