[package]
name = "dx-packet"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Zero-dependency binary protocol types for dx-www"

# No dependencies - this is the contract between server and client
[features]
default = []
std = ["serde", "bincode"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
bincode = { version = "2.0.0-rc.3", features = ["serde"], optional = true }
