[package]
name = "dx-sched"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["Performance", "Window"] }
dx-core.workspace = true
dx-dom.workspace = true
dx-morph.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true
