[package]
name = "dx-server"
version = "0.1.0"
edition = "2021"
authors = ["Dx-WWW Runtime Team"]
license = "MIT OR Apache-2.0"
description = "The Holographic Server - SSR, Binary Streaming, and Delta Patching"
repository = "https://github.com/dx-sh/dx-www-runtime"
keywords = ["server", "ssr", "binary", "edge", "htip"]

[dependencies]
# HTTP Core
axum = { version = "0.7", features = ["http2", "ws"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["compression-br", "fs", "cors", "trace"] }
hyper = { version = "1.0", features = ["full"] }

# Binary Handling
bincode = "2.0.0-rc.3"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

# Internal Dependencies
dx-binary = { path = "../dx-binary" }
dx-packet = { path = "../dx-packet", features = ["std"] }

# Crypto (for Signed Payloads)
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
blake3 = "1.8"
rand = "0.8"

# Performance
dashmap = "5.5"          # Concurrent State Cache
mimalloc = "0.1"         # Fast allocator

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching
notify = "6.1"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

