[package]
name = "hello-world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
dx-core.workspace = true
dx-dom.workspace = true
dx-morph.workspace = true
dx-sched.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols
