[package]
name = "hello-world"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
dx-core.workspace = true
dx-dom.workspace = true
dx-morph.workspace = true
dx-sched.workspace = true
dx-binary.workspace = true
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true

